# pinalyzer

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
lib/dma/: CMakeLists.txt  dma.c  dma.h  mailbox.c  mailbox.h  registers.h
src/: pinalyzer.c
